--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
     "name": "jacobmarshall/ioc",
     "version": "0.0.1-alpha",
+    "description": "The lightweight IoC container.",
+    "keywords": ["IoC"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Jacob Marshall",
+            "email": "jacob@manage.net.nz"
+        }
+    ],
     "autoload": {
         "psr-0": {
             "Marshall": "src/"
